Update GHA (#1118)
* Improve gha

* Upload tar

* Update

* Upload tar

* Update server

* Fix test command

* Fix redundent checkstyle

* Fix test command

* Fix the publish

* Update test

* fix

* temp

* Update injection

* Update default URL

* Fix

* Update gha name